Fix Image Home and fix logo z-index

--- a/src/app/Home.module.css
+++ b/src/app/Home.module.css
@@ -26,20 +26,20 @@
 }
 
 .conteudoPrincipal h1 {
-    font-size: 6rem;
+    font-size: 5rem;
     font-weight: bold;
     text-align: center;
 }
 
 .conteudoPrincipal h2 {
-    font-size: 4rem;
+    font-size: 3rem;
     font-weight: bold;
     text-align: center;
     color: #000;
 }
 
 .conteudoPrincipal li {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
     text-align: left;
     color: #000;
@@ -60,11 +60,12 @@
 
 
 .rightColumn {
-  height: 100vh; 
+    position: relative;
+    max-height: 100vh;
+    aspect-ratio: 2/3;
 }
 
 .rightColumn img {
-    min-height: 100vh;
     display: block;
 }
 
